--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "agrados",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongodb": "^3.0.0-rc0"
   }
 }
